# ozaki-jax

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: cpu-validation.yml
benchmarks/: accumulation_experiments.py  accumulation_experiments_v2.py  accuracy_diagnosis.py  bench_bf16_broadcast.py  bench_bf16_interleaved.py  bench_interleaved.py  bench_pallas_fused.py  bench_pallas_v2.py  ci_cpu_validate.py  ci_gram_validate.py  ci_solve_validate.py  ci_tier1_validate.py  extraction_quality.py  ondevice_accumulation_validate.py  ondevice_validate.py  pipeline_profile.py  precision.py  stress_test.py  test_pallas_fused.py  tpu_devres_bench.py  tpu_full_results.json  tpu_full_validate.py  tpu_fused_bench.py  tpu_fused_profile.py  tpu_mxu_diag.py  tpu_ondevice_bench.py  tpu_phase_profile.py  tpu_results.json  tpu_scaling_sweep.py  tpu_tuner_bench.py  tpu_v04_profile.py  tpu_validate.py
ozaki_jax/: __init__.py  extract.py  gram.py  inv.py  lstsq.py  matmul.py  norm.py  pallas_gemm_accum.py  pallas_ops.py  solve.py
