[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ozaki-jax"
version = "0.4.0"
description = "FP64-accurate matrix multiplication from BF16 hardware via Ozaki Extract in JAX"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Efithor" }]
keywords = ["jax", "tpu", "bfloat16", "fp64", "matmul", "linear-algebra", "numerical"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax>=0.4",
    "numpy",
]

[project.optional-dependencies]
tpu = ["jax[tpu]"]

[project.urls]
Homepage = "https://github.com/efithor/ozaki-jax"
Repository = "https://github.com/efithor/ozaki-jax"
Issues = "https://github.com/efithor/ozaki-jax/issues"
